<resources>
    <string name="app_name">MyVoiceApp</string>
    <string name="natija">Natija</string>
    <string name="text_yoziladi">text yoziladi</string>
    <string name="rasmni_korish">Rasmni korish</string>
    <string name="rasm_qo_shish">Rasm qo\'shish</string>
    <string name="sozlamalar">Sozlamalar</string>
    <string name="jonli">Jonli</string>
    <string name="audioni_eshitish">Audioni eshitish</string>
</resources>